# thermalplanet

./: .gitignore  CMakeLists.txt
data/: particles_0.csv  particles_1.csv  particles_10.csv  particles_11.csv  particles_12.csv  particles_13.csv  particles_14.csv  particles_15.csv  particles_16.csv  particles_17.csv  particles_18.csv  particles_19.csv  particles_2.csv  particles_20.csv  particles_21.csv  particles_22.csv  particles_23.csv  particles_24.csv  particles_25.csv  particles_26.csv  particles_27.csv  particles_28.csv  particles_29.csv  particles_3.csv  particles_30.csv  particles_31.csv  particles_32.csv  particles_33.csv  particles_34.csv  particles_35.csv  particles_36.csv  particles_37.csv  particles_38.csv  particles_39.csv  particles_4.csv  particles_40.csv  particles_41.csv  particles_42.csv  particles_43.csv  particles_44.csv  (+60 more)
src/: DataManager.cpp  DataManager.h  Gravity.cpp  Gravity.h  Initialization.cpp  Initialization.h  Integrator.cpp  Integrator.h  Particle.h  Renderer.cpp  Renderer.h  main.cpp
